# aktuelle5minuten

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  apispec.yaml  index.html  package.json  pnpm-lock.yaml  prompt.txt  pyproject.toml  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  lint.yml
app/: __init__.py  dlf.py  schema.sql
app/db_helper/: __init__.py  queries.py
assets/: main.css
assets/js/: tinder.js
frontend/: .prettierrc  index.html  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api-client/.openapi-generator/: FILES
frontend/src/api-client/apis/: ArticleApi.ts  CategoryApi.ts  FilesApi.ts  StatusApi.ts
frontend/src/api-client/models/: AiStatus.ts  Article.ts  ArticleFiguresInnerImage.ts  Count.ts
frontend/src/assets/: dlf.sass  styles.sass
frontend/src/lib/: Home.svelte  NavBar.svelte  PDFCreate.svelte
frontend/src/lib/components/: CreateProgress.svelte  ErrorAlert.svelte  PromoteDialog.svelte  TinderCard.svelte  TinderProgress.svelte
frontend/src/lib/selectors/: ResetDB.svelte
migrations/2024-08-29-143035_create_articles/: down.sql  up.sql
migrations/2024-08-29-143044_create_print_articles/: down.sql  up.sql
migrations/2024-08-30-130333_rename_columns/: down.sql  up.sql
migrations/2024-08-31-200017_add_figure_to_articles/: down.sql  up.sql
src/: App.svelte  api.rs  dlf.rs  main.rs  main.ts  models.rs  schema.rs  types.d.ts  typst_helper.rs
src/api/: actions.rs  article.rs  category.rs  mod.rs  typst_template.typ
src/api-client/: runtime.ts
src/api-client/.openapi-generator/: FILES
src/api-client/apis/: ActionsApi.ts  ArticleApi.ts  StatusApi.ts  index.ts
src/api-client/models/: Article.ts  ArticleContent.ts  ArticleFiguresInner.ts  Summary200Response.ts  index.ts
src/assets/: styles.sass
src/htmx/: mod.rs  pdfcreate.rs  tinder.rs
src/lib/: DateSelect.svelte  Home.svelte  NavBar.svelte  PDFCreate.svelte  PDFList.svelte  Tinder.svelte
src/lib/components/: CreateCard.svelte  CreateProgress.svelte  ErrorAlert.svelte  Loading.svelte  PromoteDialog.svelte  TinderCard.svelte  TinderProgress.svelte
src/lib/selectors/: LoadArticles.svelte  ResetDB.svelte
src/routes/: dates_route.rs  index_route.rs  mod.rs  pdfcreate_route.rs  pdflist_route.rs  tinder_route.rs
src/scrapers/: dlf.rs  mod.rs
src/util/: mod.rs  pdfcreation.rs  tinder.rs  typst.rs  typst_template.typ
templates/: base.html.hbs  dates.html.hbs  index.html.hbs  pdfcreate.html.hbs  pdflist.html.hbs  tinder.html.hbs  tinder_base.html.hbs  wait_for_pdf.html.hbs
templates/components/: create_card.html.hbs  home_button.html.hbs  pdfcreate_partial.html.hbs  promote_dialog.html.hbs  tinder_card.html.hbs  tinder_partial.html.hbs  toolbox.html.hbs
