[package]
name = "aktuelle5minuten"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["time"] }
diesel_migrations = "2.2"
regex = "1.11"
reqwest = "0.12"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = {version = "0.3.36", features = ["serde-human-readable"]}
log = "0.4.22"

# Typst dependencies
typst = "0.12"
typst-pdf = "0.12"
ttf-parser = "0.25"
thiserror = "2.0"

[dev-dependencies]
tokio = "1.41"
