[package]
name = "aktuelle5minuten"
version = "2.0.0-beta3"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["time"] }
diesel_migrations = "2.2"
regex = "1.11"
reqwest = "0.12"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = {version = "0.3", features = ["serde-human-readable", "local-offset"] }

# Typst dependencies
typst = "0.13"
typst-pdf = "0.13"
ttf-parser = "0.25"
thiserror = "2.0"
ecow = "0.2"

[dev-dependencies]
tokio = "1.48"
