[package]
name = "aktuelle5minuten"
version = "2.0.0-beta4"
edition = "2024"

[dependencies]
diesel = { version = "2.3", features = ["time"] }
diesel_migrations = "2.2"
regex = "1.12"
reqwest = "0.12"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = {version = "0.3", features = ["serde-human-readable", "local-offset"] }

# Typst dependencies
typst = "0.14"
typst-pdf = "0.14"
ttf-parser = "0.25"
thiserror = "2.0"

[dev-dependencies]
tokio = "1.48"
