[tool.poetry]
name = "aktuelle5minuten"
version = "0.1.0"
description = ""
authors = ["MaFeLP <60669873+MaFeLP@users.noreply.github.com>"]
readme = "README.md"

packages = [
  { include = "app" },
]
include = [
  { path = "app/static" },
  { path = "app/schema.sql" },
]
exclude = [
  { path = "app/static/pdfs" },
]


[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
flask = "^3.0.2"
gunicorn = "^21.2.0"
lxml = "^5.1.0"
python = "^3.11"
requests = "^2.31.0"
typst = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
