[tool.poetry]
name = "aktuelle5minuten"
version = "1.0.1"
description = "Semi-automatische PDF-Erstellung mit den News der letzten Woche vom Deutschlandfunk "
authors = ["MaFeLP <mafelp@proton.me>"]
readme = "README.md"

packages = [
  { include = "app" },
]
include = [
  { path = "app/static" },
  { path = "app/schema.sql" },
]
exclude = [
  { path = "app/static/pdfs" },
]


[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
gunicorn = "^22.0.0"
lxml = "^5.2.2"
python = "^3.11"
requests = "^2.32.0"
typst = "^0.11.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
